--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/personalBlog
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-spring.jpa.hibernate.ddl-auto=update
-
-#Security
-jwt.secret=engineer
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.sql.init.mode=never
+spring.jpa.show-sql=false
