--- a/main/src/main/resources/application.properties
+++ b/main/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.profiles.active=local
+server.port=8080
+spring.application.name=main
 
 server.tomcat.max-http-form-post-size=10MB
 spring.servlet.multipart.max-file-size=10MB
