--- a/comment/src/main/resources/application.yml
+++ b/comment/src/main/resources/application.yml
@@ -10,3 +10,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
