--- a/main/pom.xml
+++ b/main/pom.xml
@@ -55,6 +55,11 @@
             <version>0.11.2</version>
             <scope>runtime</scope>
         </dependency>
+        <!--        eureka-client-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
