--- a/main/src/main/resources/application.properties
+++ b/main/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.application.name=main
 server.tomcat.max-http-form-post-size=10MB
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
+
+eureka.client.service-url.defaultZone= http://localhost:8761/eureka
